Make gender radio buttons required
Added 'required' attribute to gender radio buttons for validation.

--- a/project_stream1_news_portal.html
+++ b/project_stream1_news_portal.html
@@ -247,11 +247,11 @@ HERO SECTION AND ANNOUNCEMENTS - (Member 1 and 4)
 
                 <div>
                     <span>Gender:</span><br>
-                    <input type="radio" id="male" name="gender" value="male">
+                    <input type="radio" id="male" name="gender" value="male" required>
                     <label for="male">Male</label>
-                    <input type="radio" id="female" name="gender" value="female">
+                    <input type="radio" id="female" name="gender" value="female" required>
                     <label for="female">Female</label>
-                    <input type="radio" id="prefer_not_to_say" name="gender" value="prefer_not_to_say">
+                    <input type="radio" id="prefer_not_to_say" name="gender" value="prefer_not_to_say" required>
                     <label for="prefer_not_to_say">Prefer not to say</label>
                 </div>
 
